--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -1,41 +1,59 @@
-<HTML>
-
-<!--
+<html>
+  <!--
 Lode Runner!!! HTML
 
 	*** REESCREVA O TEXTO A SEGUIR! ***
 
-Autores: Fulano (99998), Sicrano (99999)
+Autores: Jacinta Sousa (55075), Joao Bordalo (55697)
 
-O ficheiro "LodeRunner.js" tem de incluir, logo nas primeiras linhas, um comentário
-inicial contendo: o nome e número dos dois alunos que realizaram o projeto;
-indicação de quais as partes do trabalho que foram feitas e das que não foram
-feitas (para facilitar uma correção sem enganos); ainda possivelmente alertando
-para alguns aspetos da implementação que possam ser menos óbvios para o avaliador.
+O ficheiro "LodeRunner.js" tem de incluir, logo nas primeiras linhas, um comentario
+inicial contendo: o nome e numero dos dois alunos que realizaram o projeto;
+indicacao de quais as partes do trabalho que foram feitas e das que nao foram
+feitas (para facilitar uma correcao sem enganos); ainda possivelmente alertando
+para alguns aspetos da implementacao que possam ser menos obvios para o avaliador.
 
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -->
 
-<HEAD>
-<title>Linguagens e Ambientes de Programação (2019/2020) [Eng.Inf. - DI/FCT/UNL] - 3º projeto prático (Javascript)</title>
+  <head>
+    <title>
+      Linguagens e Ambientes de Programacao (2019/2020) [Eng.Inf. - DI/FCT/UNL]
+      - 3o projeto pratico (Javascript)
+    </title>
 
-<SCRIPT TYPE="text/javascript" src="LodeRunner0.js"></SCRIPT>
-<SCRIPT TYPE="text/javascript" src="LodeRunner.js"></SCRIPT>
+    <script type="text/javascript" src="js/LodeRunner0.js"></script>
+    <script type="text/javascript" src="js/LodeRunner.js"></script>
+  </head>
 
-</HEAD>
-
-
-<BODY onload="onLoad()">
-<p><b>LodeRunner</b> -- Author1 (XXXXX), Author2 (YYYYY)
-<FORM NAME="form1">
-	<CANVAS id="canvas1" width="504" height="272" style="border:1px solid #000000;">
-		Your browser doesn't support the HTML5 CANVAS tag.
-	</CANVAS> <p>
-	<INPUT TYPE="button" NAME="button1" VALUE="Button1" SIZE=10 OnClick="b1()">
-	<INPUT TYPE="button" NAME="button2" VALUE="Button2" SIZE=10 OnClick="b2()">
-</FORM>
-</BODY>
-
-</HTML>
-<!-- código inicial de AMD/2020 -->
+  <body onload="onLoad()">
+    <p><b>LodeRunner</b> -- Jacinta Sousa (55075), Joao Bordalo (55697)</p>
+    <form name="form1">
+      <canvas
+        id="canvas1"
+        width="504"
+        height="272"
+        style="border: 1px solid #000000;"
+      >
+        Your browser doesn't support the HTML5 CANVAS tag.
+      </canvas>
+      <p>
+        <input
+          type="button"
+          name="button1"
+          value="Button1"
+          size="10"
+          OnClick="b1()"
+        />
+        <input
+          type="button"
+          name="button2"
+          value="Button2"
+          size="10"
+          OnClick="b2()"
+        />
+      </p>
+    </form>
+  </body>
+</html>
+<!-- cï¿½digo inicial de AMD/2020 -->
 <!-- vim:set ts=4 sw=4 et: -->
