Add score input

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -40,7 +40,7 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
         <input
           type="button"
           name="button1"
-          value="Button1"
+          value="Reset"
           size="10"
           OnClick="b1()"
         />
@@ -50,6 +50,20 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           value="Button2"
           size="10"
           OnClick="b2()"
+        />
+        <input
+          type="button"
+          name="button3"
+          value="Button3"
+          size="10"
+          OnClick="b3()"
+        />
+        <input
+          value="0"
+          type="text"
+          id="score"
+          readonly
+          style="text-align: right;"
         />
       </p>
     </form>
