Add a gold count

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -65,6 +65,13 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           readonly
           style="text-align: right;"
         />
+        <input
+          value="0"
+          type="text"
+          id="gold"
+          readonly
+          style="text-align: right;"
+        />
       </p>
     </form>
   </body>
