--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -42,7 +42,7 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           name="button1"
           value="Reset"
           size="10"
-          OnClick="b1()"
+          OnClick="reset()"
         />
         <input
           type="button"
@@ -71,6 +71,21 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           id="gold"
           readonly
           style="text-align: right;"
+        />
+      </br></br>
+        <input
+          type="button"
+          name="button1"
+          value="Play Sound"
+          size="10"
+          OnClick="playSound()"
+        />
+        <input
+          type="button"
+          name="button1"
+          value="Stop Sound"
+          size="10"
+          OnClick="stopSound()"
         />
       </p>
     </form>
