Fix reset button

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -42,7 +42,7 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           name="button1"
           value="Reset"
           size="10"
-          OnClick="reset()"
+          OnClick="resetGame()"
         />
         <input
           type="button"
