Add HTMLHandling class
Might have to change the way it's treated

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -42,21 +42,21 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           name="button1"
           value="Reset"
           size="10"
-          OnClick="resetGame()"
+          OnClick="html.resetGame()"
         />
         <input
           type="button"
           name="button2"
           value="Button2"
           size="10"
-          OnClick="b2()"
+          OnClick="html.b2()"
         />
         <input
           type="button"
           name="button3"
           value="Button3"
           size="10"
-          OnClick="b3()"
+          OnClick="html.b3()"
         />
         <input
           value="0"
@@ -78,14 +78,14 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           name="button1"
           value="Play Sound"
           size="10"
-          OnClick="playSound()"
+          OnClick="html.playSound()"
         />
         <input
           type="button"
           name="button1"
           value="Stop Sound"
           size="10"
-          OnClick="stopSound()"
+          OnClick="html.stopSound()"
         />
       </p>
     </form>
