Add level resets

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -54,9 +54,9 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
         <input
           type="button"
           name="button3"
-          value="Button3"
+          value="Next level"
           size="10"
-          OnClick="html.b3()"
+          OnClick="html.nextLevel()"
         />
         <input
           value="0"
