Fix death, lives broken

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -58,6 +58,7 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           size="10"
           OnClick="html.nextLevel()"
         />
+        <label>Score:</label>
         <input
           value="0"
           type="text"
@@ -65,6 +66,7 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           readonly
           style="text-align: right;"
         />
+        <label>Gold Count:</label>
         <input
           value="0"
           type="text"
@@ -72,6 +74,15 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           readonly
           style="text-align: right;"
         />
+      </br></br>
+        <label>Lode Runners:</label>
+        <input
+        value=""
+        type="text"
+        id="loderunners"
+        readonly
+        style="text-align: right;"
+      />
       </br></br>
         <input
           type="button"
