Refactor and improve HTML

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -47,17 +47,32 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
         <input
           type="button"
           name="button2"
-          value="Button2"
+          value="Previous level"
           size="10"
-          OnClick="html.b2()"
+          OnClick="html.previousLevel()"
         />
         <input
-          type="button"
-          name="button3"
-          value="Next level"
-          size="10"
-          OnClick="html.nextLevel()"
+        type="button"
+        name="button3"
+        value="Next level"
+        size="10"
+        OnClick="html.nextLevel()"
         />
+      </br></br>
+      <input
+      type="button"
+      name="button2"
+      value="Previous level"
+      size="10"
+      OnClick="html.previousLevel()"
+      />
+      <input
+      type="button"
+      name="button3"
+      value="Next level"
+      size="10"
+      OnClick="html.nextLevel()"
+      />
       </br></br>
         <label>Score:</label>
         <input
