--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -16,6 +16,7 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
 -->
 
   <head>
+    <meta charset="UTF-8">
     <title>
       Linguagens e Ambientes de Programacao (2019/2020) [Eng.Inf. - DI/FCT/UNL]
       - 3o projeto pratico (Javascript)
