Display current level

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -60,6 +60,14 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
           size="10"
           OnClick="html.nextLevel()"
           />
+          <label>Current level:</label>
+          <input
+            value="1"
+            type="text"
+            id="current-level"
+            readonly
+            style="text-align: right;"
+          />
         </div>
       </br>
       <div>
