Add comments and refactor

--- a/public/LodeRunner.html
+++ b/public/LodeRunner.html
@@ -27,7 +27,7 @@ para alguns aspetos da implementacao que possam ser menos obvios para o avaliado
   </head>
 
   <body onload="onLoad()">
-    <p><b>LodeRunner</b> -- Jacinta, didn't do much, Sousa (55075), Joao Bordalo (55697)</p>
+    <p><b>LodeRunner</b> -- Jacinta Sousa (55075), Joao Bordalo (55697)</p>
     <form name="form1">
       <canvas
         id="canvas1"
